add bold style to ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,7 +46,7 @@
       <ul>
         <% for(let i = 0; i < quotes.length; i++){%>
         <li class="quote">
-          <span><%=quotes[i].name %> </span>:
+          <span class="bold"><%=quotes[i].name %> </span>:
           <span><%=quotes[i].quote %> </span>
         </li>
         <%} %>
